# tree-sitter-language-pack-win-arm64

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  composer.json  package.json  pyproject.toml
.ai-rulez/: config.yaml
.ai-rulez/domains/language-management/rules/: language-registry.md  parser-testing.md  version-management.md
.ai-rulez/domains/parser-compilation/context/: tree-sitter-overview.md
.ai-rulez/domains/parser-compilation/rules/: build-system.md  c-abi-safety.md  grammar-compilation.md
.github/workflows/: ci-c.yaml  ci-elixir.yaml  ci-go.yaml  ci-java.yaml  ci-node.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  publish.yaml
.task/: go.yml
crates/ts-pack-cli/: README.md
crates/ts-pack-cli/src/commands/: init.rs
crates/ts-pack-core/: Cargo.toml  README.md  build.rs
crates/ts-pack-core/src/: download.rs  error.rs  lib.rs  node.rs  parse.rs  query.rs  registry.rs  text_splitter.rs
crates/ts-pack-core/src/intel/: chunking.rs  intelligence.rs  mod.rs  types.rs
crates/ts-pack-core/src/intel/queries/: generic.rs  go_lang.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/ts-pack-elixir/: Cargo.toml  README.md  mix.exs
crates/ts-pack-elixir/src/: lib.rs
crates/ts-pack-ffi/: Cargo.toml  README.md
crates/ts-pack-ffi/include/: ts_pack.h
crates/ts-pack-ffi/src/: lib.rs
crates/ts-pack-go/: README.md  go.mod  tspack.go
crates/ts-pack-java/: README.md  pom.xml
crates/ts-pack-java/src/main/java/io/github/treesitter/languagepack/: TsPackRegistry.java
crates/ts-pack-node/: Cargo.toml  README.md  package.json
crates/ts-pack-node/src/: lib.rs
crates/ts-pack-php/src/: lib.rs
crates/ts-pack-python/: Cargo.toml  README.md  pyproject.toml
crates/ts-pack-python/src/: lib.rs
crates/ts-pack-ruby/: Cargo.toml  README.md  tree_sitter_language_pack.gemspec
crates/ts-pack-ruby/src/: lib.rs
crates/ts-pack-wasm/: Cargo.toml  README.md  package.json
crates/ts-pack-wasm/src/: lib.rs
e2e/c/: CMakeLists.txt
e2e/elixir/: mix.exs
e2e/elixir/test/: intel_test.exs  smoke_test.exs
e2e/go/: error_handling_test.go  go.mod  helpers_test.go  intel_test.go  metadata_test.go  parsing_test.go  registry_test.go  smoke_test.go  tree_inspection_test.go
e2e/java/src/test/java/io/github/treesitter/languagepack/e2e/: IntelTest.java  SmokeTest.java
e2e/python/: pyproject.toml
e2e/python/tests/: test_error_handling.py  test_intel.py  test_parsing.py  test_registry.py  test_smoke.py
e2e/ruby/spec/: intel_spec.rb  smoke_spec.rb  spec_helper.rb
e2e/rust/: Cargo.toml
e2e/rust/tests/: test_error_handling.rs  test_intel.rs  test_metadata.rs  test_parsing.rs  test_registry.rs  test_smoke.rs  test_tree_inspection.rs
e2e/typescript/tests/: error_handling.spec.ts  helpers.ts  intel.spec.ts  metadata.spec.ts  parsing.spec.ts  registry.spec.ts  smoke.spec.ts  tree_inspection.spec.ts
e2e/wasm/tests/: error_handling.spec.ts  helpers.ts  metadata.spec.ts  parsing.spec.ts  registry.spec.ts  smoke.spec.ts
scripts/: clone_vendors.py  readme_config.yaml  sync_versions.py
scripts/ci/ruby/: vendor-core.py
scripts/readme_templates/: language_package.md.jinja  root.md.jinja
scripts/readme_templates/partials/: quick_start.md.jinja
sources/: language_definitions.json
tests/test_apps/csharp/: TestApp.csproj
tests/test_apps/elixir/: mix.exs
tests/test_apps/go/: go.mod
tests/test_apps/java/: pom.xml
tests/test_apps/node/: package.json
tests/test_apps/php/: composer.json
tests/test_apps/python/: comprehensive_test.py  pyproject.toml  smoke_test.py
tests/test_apps/ruby/: Gemfile
tests/test_apps/rust/: Cargo.toml
tests/test_apps/rust/src/: main.rs
tests/test_apps/wasm/: package.json
tools/e2e-generator/fixtures/intel/: chunking.json  python_intel.json  rust_intel.json
tools/e2e-generator/fixtures/smoke/: actionscript.json  ada.json  agda.json  apex.json  arduino.json  asm.json  astro.json  bash.json  beancount.json  bibtex.json  bicep.json  bitbake.json  bsl.json  c.json  cairo.json  capnp.json  chatito.json  clarity.json  clojure.json  cmake.json  cobol.json  comment.json  commonlisp.json  cpon.json  cpp.json  css.json  csv.json  cuda.json  d.json  dart.json  dockerfile.json  doxygen.json  dtd.json  elisp.json  elixir.json  elm.json  erlang.json  fennel.json  firrtl.json  fish.json  (+130 more)
tools/e2e-generator/src/: fixtures.rs
tools/e2e-generator/src/generators/: c.rs  csharp.rs  elixir.rs  go.rs  java.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs  wasm.rs
