[workspace]
members = ["crates/*", "tools/e2e-generator"]
exclude = ["crates/ts-pack-go", "crates/ts-pack-java"]
resolver = "2"

[workspace.package]
version = "1.0.0-rc.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kreuzberg-dev/tree-sitter-language-pack"
keywords = ["tree-sitter", "parser", "syntax", "language-pack", "kreuzberg"]

[workspace.dependencies]
tree-sitter = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
thiserror = "2"
cc = "1"
libloading = "0.9"
cbindgen = "0.29"
clap = { version = "4", features = ["derive"] }
toml_edit = "0.25"
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
napi-build = "2"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
rustler = "0.37"
