[package]
name = "ts-pack-elixir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Elixir Rustler NIF bindings for tree-sitter language pack"
publish = false

[lib]
name = "ts_pack_elixir"
crate-type = ["cdylib"]

[dependencies]
ts-pack-core = { path = "../ts-pack-core", features = ["serde"] }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
rustler = { workspace = true }
