[package]
name = "ts-pack-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for tree-sitter language pack"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ts-pack-core = { path = "../ts-pack-core", features = ["serde"] }
serde_json = { workspace = true }
tree-sitter = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
