[package]
name = "ts-pack-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js NAPI bindings for tree-sitter language pack"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ts-pack-core = { path = "../ts-pack-core", features = ["serde"] }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
