[package]
name = "ts-pack-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python PyO3 bindings for tree-sitter language pack"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
ts-pack-core = { path = "../ts-pack-core", features = ["serde"] }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
pyo3 = { workspace = true }
