[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "test-app-python"
version = "1.0.0rc2"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pytest>=8",
  "tree-sitter-language-pack==1.0.0rc6",
]

[tool.ruff]
lint.ignore = [ "D100", "D101", "D102", "D103", "INP001", "S101" ]
